--- a/frontend/front-end/src/components/css/Header.css
+++ b/frontend/front-end/src/components/css/Header.css
@@ -1,5 +1,5 @@
 .header{
-    background-image: linear-gradient(rgb(15, 62, 189),rgb(17, 107, 182));
+    background-image: linear-gradient(rgb(15, 62, 189),rgb(8, 82, 143));
     color: white;
   top: 0;
   position: fixed;
@@ -8,19 +8,47 @@
   }
   
   .header nav{
-    padding: 10px 0px;
-    display: flex;
-    justify-content: space-between;
+    padding: 20px 0px;
+    display: grid;
+    grid-template-columns: 1fr 1.2fr 1fr;
   }
   
   .logo{
     margin:auto 20px;
+
   }
   
   .logo h3{
     margin: 0 !important;
+    background-image: linear-gradient(355.5deg, rgb(255, 255, 255) 50%,#eb870d 50%);
+    -webkit-text-fill-color:transparent;
+    -webkit-background-clip: text;
+    font-size: 30px;
+    font-weight: bold;
+    font-size: 30px;
   }
-  
+
+  .search{
+    width: 100%;
+    margin-top: 5px;
+    justify-self: center;
+  }
+  .search-bar{
+    background-color: white;
+    padding: 5px 10px;
+    border-radius: 20px;
+    width: 100%;
+
+  }
+
+  .search input{
+    width: 100%;
+    border: none;
+    outline: none;
+    background: transparent;
+    color: rgb(15, 62, 189);
+    font-size: 15px;
+  }
   .nav_items{
     margin: 0px 10px;
   }
@@ -28,11 +56,76 @@
   .nav_items ul{
    list-style: none;
     display: flex;
-    flex-wrap: wrap;
+    justify-content:space-evenly;
+    margin:auto 20px;
   }
   
   .nav_items ul li{
-    margin: 0px 20px !important;
-  padding-top: 20px;
+ width: auto;
+  padding-top: 10px;
+  }
+
+  /* sm_controls */
+.sm_controls{
+  display: none;
+}
+  /* sm_controls */
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+  @media screen and (max-width:912px){
+    .header nav{
+      grid-template-columns: 0.5fr 1fr 0.5fr;
+    }
+    .search-bar{
+   border-radius: 10px;
+    }
+    .sm_controls{
+      display: block;
+      margin:auto 20px; 
+    }
+
+    .sm_controls .close{
+display: none;
+    }
+
+  .sm_controls .open{
+    display: block;
+  }
+.sm_cntrl{
+  float: right;
+}
+  .sm_controls i{
+    font-size: 20px;
+    padding-top: 10px ;
+  }
+
+  .nav_items{
+    display: none;
+  position: absolute;
+  width: 100%;
+  background-image: linear-gradient(rgb(15, 62, 189),rgb(17, 107, 182));
+  margin: 0;
+padding: 30px;
+margin-top: 70px;
+right: 0;
+
+  }
+
+  .nav_items ul{
+    display: grid;
+    place-items: center;
   }
   
+  }
