--- a/frontend/front-end/src/components/css/Header.css
+++ b/frontend/front-end/src/components/css/Header.css
@@ -1,9 +1,10 @@
 .header{
-    background-image: linear-gradient(rgb(15, 62, 189),rgb(8, 82, 143));
+    background-image: linear-gradient(to right,rgb(8, 33, 104) 40%, rgb(14, 118, 204) );
     color: white;
   top: 0;
   position: fixed;
   width: 100%;
+  z-index: 990;
 
   }
   
@@ -17,7 +18,7 @@
     margin:auto 20px;
 
   }
-  
+
   .logo h3{
     margin: 0 !important;
     background-image: linear-gradient(355.5deg, rgb(255, 255, 255) 50%,#eb870d 50%);
@@ -64,6 +65,14 @@
  width: auto;
   padding-top: 10px;
   }
+  .item{
+    color: white;
+   }
+
+   .item:hover{
+    color: #eb870d;
+    transition: 0.5s;
+   }
 
   /* sm_controls */
 .sm_controls{
@@ -115,7 +124,7 @@ display: none;
     display: none;
   position: absolute;
   width: 100%;
-  background-image: linear-gradient(rgb(15, 62, 189),rgb(17, 107, 182));
+  background-image: linear-gradient(to right,rgb(8, 33, 104) 30%, rgb(14, 118, 204));
   margin: 0;
 padding: 30px;
 margin-top: 70px;
@@ -126,6 +135,8 @@ right: 0;
   .nav_items ul{
     display: grid;
     place-items: center;
+    padding: 0;
   }
+
   
   }
