--- a/frontend/front-end/src/index.css
+++ b/frontend/front-end/src/index.css
@@ -28,9 +28,12 @@ body {
   margin: 0;
   /* display: flex;
   place-items: center; */
-  min-width: 320px;
-  min-height: 100vh;
+  /* justify-content: space-between; */
+  /* min-width: 320px;
+  min-height: 100vh; */
+
 }
+
 
 h1 {
   font-size: 3.2em;
