--- a/frontend/front-end/src/components/css/Single.css
+++ b/frontend/front-end/src/components/css/Single.css
@@ -5,45 +5,142 @@
     margin-top: 70px;
  }
  /* lst_prod_inner */
-  
- .lst_prod_inner{
-  background-color: aqua;
-    margin-top: 200px;
-    width: 100%;
-    justify-self: center;
-    /* right: 0 !important;
-    position: absolute; */
-    display: flex;
-    flex-wrap: wrap !important;
-    flex-wrap: wrap;
-    justify-content:space-evenly;
-    margin-top: 60px;
-    /* overflow: hidden; */
-  }
 
   
   .lst_prod_box{
-min-width: 30%;
+    display: grid;
+    width: 28%;
+    place-items: center;
+    /* background-image: linear-gradient(to right,rgb(8, 33, 104) 40%, rgb(14, 118, 204) ); */
+    color: white;
+    padding-bottom: 60px;
+    margin: 20px 10px;
+    position: relative;
+    cursor: pointer;
+
+  }
+ .lst_prod_box:hover .buttons{
+transition: 3s;
+display: grid;
+}
+.lst_prod_box:hover .img img{
+
+  animation: zoom-in-zoom-out 2s ease;
+  overflow: hidden !important;
+  transition: 0.2.5s ease-in;
+  }
+  .lst_prod_box .img{
+    background-color: #8787876c;
+    margin-bottom: 0px;
+    width: 100%;
     display: grid;
     place-items: center;
-    background-image: linear-gradient(to right,rgb(8, 33, 104) 40%, rgb(14, 118, 204) );
-    border-radius: 5px;
-    color: white;
-    padding: 20px;
-    margin: 20px 0px;
+    height:100%;
+    position: relative;
+overflow: hidden;
+  }
+
+  .lst_prod_box img{
+   width: 100%;
+   height: 100%;
+  }
+  .t_and_p{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+
+  }
+  .t_and_p h3{
+ color: black;
+ font-size: 17px;
+ margin: 0;
   }
   .lst_prod_box p{
 color: #eb870d;
+margin: 0;
+
   }
+  .lst_prod_box .buttons{
+    position: absolute;
+    top: 0;
+    display: none;
+    width: 100%;
+    animation: zoom-in-zoom-out 1s ease;
+    place-items: center;
+    height: 100%;
+    background-color: #1110105e;
+
+  }
+
+
+  @keyframes zoom-in-zoom-out {
+
+
+ 
+    50% {
+      transform: rotate(180deg);
+    }
+
+}
+
+
+
   .lst_prod_box .buttons button{
     margin: auto 10px;
-    padding: 5px 10px;
-    color: rgb(14, 166, 212);
-    font-size: 18px;
+    padding: 9px 28px;
+    color: #111010be;
+    font-size: 13px;
+    border-radius: 20px;
+    border: none;
+    animation: zoom-in-zoom-out 2s ease;
   }
-  .lst_prod_box .buttons #wishlist{
+
+
+  .lst_prod_box .buttons button:hover{
+    background-color:#111010be;
+    color: white;
+    transition: 1s;
+    outline: none;
+  }
+
+
+
+
+  /* .lst_prod_box .buttons #wishlist{
     color: red;
-  }
+  } */
   
   
   /* lst_prod_inner */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+@media screen and (max-width:767px){
+
+  .lst_prod_box{
+    width: 45%;
+  }
+}
+
+@media screen and (max-width:439px){
+
+  .lst_prod_box{
+    width: 95%;
+  }
+  .t_and_p h3{
+    font-size: 15px;
+     }
+}
+
