--- a/frontend/front-end/src/components/css/Store.css
+++ b/frontend/front-end/src/components/css/Store.css
@@ -1,20 +1,39 @@
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient( rgb(14, 118, 204), rgb(8, 33, 104) 50%);
+  border-radius: 10px;
+  height: 2px;
+  box-shadow: 3px 3px 3px grey;
+}
 .store{
     padding-top: 70px;
 display: flex;
-}  
+justify-content: center;
+overflow: auto;
+} 
+.sidebar_wrapper{
+
+ display: grid;
+ justify-content: center;
+} 
  
 .sidebar{
-    margin-top: 10px;
-    position: fixed;
-    width: 17%;
-    left: 0;
-    height: 100%;
-    z-index: 990;
+  width: 17%;
+  left: 0;
+  position: fixed;
+  margin-top: 10px;
+  border-right: 1px solid rgba(160, 157, 157, 0.712);
+ overflow: auto;
+ height:fit-content;
+    overflow: auto;
     display: grid;
+   
+ padding: 50px 0px;
    justify-content: center;
-    border-right: 1px solid rgba(160, 157, 157, 0.712);
-    overflow: scroll;
-
+    height: 95% !important;
 }
 .sidebar h3{
   /* margin-bottom: 30px; */
@@ -55,20 +74,34 @@ display: flex;
 
 
 
+
 .st_prod{
   position: absolute;
-  right: 0;
+right: 0;
   width: 83%;
+  justify-content: center;
   padding: 20px;
 }
+.prod_heading{
+  padding: 20px 30px;
+  padding-top: 50px;
+}
+.prod_heading#latest{
+  padding: 10px 30px;
+}
 .st_prod_inner{
-
   display: grid;
 }
 .st_prod_box{
-  display: flex;
-  justify-content: space-evenly;
+ 
+  display:flex;
+ flex-wrap: wrap;
+ justify-content: space-around;
+ 
 }
+
+
+
 .pagination{
   display: flex;
   justify-content: center;
@@ -115,3 +148,41 @@ min-width: 23%;
    */
   
   /* lst_prod_inner */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:912px){
+  .sidebar{
+    width: 20%;
+
+  }
+  .st_prod{
+    width: 80%;
+  }
+}
+
+
+@media screen and (max-width:767px){
+  .sidebar{
+    width: 100%;
+    display: none;
+    background-color: white;
+    z-index: 990;
+
+  }
+  .st_prod{
+    width: 100%;
+  }
+}
