--- a/frontend/front-end/src/index.css
+++ b/frontend/front-end/src/index.css
@@ -1,7 +1,6 @@
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
-  line-height: 24px;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -29,9 +28,9 @@ body {
   /* display: flex;
   place-items: center; */
   /* justify-content: space-between; */
-  /* min-width: 320px;
-  min-height: 100vh; */
-
+  /* /* min-width: 320px; */
+  /* min-height: 100vh;  */
+/* overflow-x: hidden; */
 }
 
 
