--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,185 +1,221 @@
-.header{
-    background-image: linear-gradient(to right,rgb(8, 33, 104) 40%, rgb(14, 118, 204) );
-    color: white;
+.header {
+  background-image: linear-gradient(to right, rgb(8, 33, 104) 40%, rgb(14, 118, 204));
+  color: white;
   top: 0;
   position: fixed;
   width: 100%;
   z-index: 990;
 
-  }
-  
-  .header nav{
-    padding: 20px 0px;
-    display: grid;
-    grid-template-columns: 1fr 1.2fr 1fr;
-  }
-  
-  .logo{
-    margin:auto 20px;
+}
 
-  }
+.header nav {
+  padding: 20px 0px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
 
-  .logo h3{
-    margin: 0 !important;
-    background-image: linear-gradient(355.5deg, rgb(255, 255, 255) 50%,#eb870d 50%);
-    -webkit-text-fill-color:transparent;
-    -webkit-background-clip: text;
-    font-size: 30px;
-    font-weight: bold;
-    font-size: 30px;
-  }
+.logo {
+  margin: auto 20px;
 
-  .search{
-    width: 100%;
-    margin-top: 5px;
-    justify-self: center;
-  }
-  .search-bar{
-    background-color: white;
-    padding: 5px 10px;
-    border-radius: 20px;
-    width: 100%;
+}
 
-  }
-#search_sm_screen{
+.logo h3 {
+  margin: 0 !important;
+  background-image: linear-gradient(355.5deg, rgb(255, 255, 255) 50%, #eb870d 50%);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  font-size: 30px;
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.search {
+  width: 100%;
+  margin-top: 5px;
+  justify-self: center;
+}
+
+.search-bar {
+  background-color: white;
+  padding: 5px 10px;
+  border-radius: 20px;
+  width: 100%;
+
+}
+
+#search_sm_screen {
   display: none;
 }
-  .search input{
-    width: 100%;
-    border: none;
-    outline: none;
-    background: transparent;
-    color: rgb(15, 62, 189);
-    font-size: 15px;
-  }
-  .nav_items{
-    margin: 0px 10px;
-  }
-  
-  .nav_items ul{
-   list-style: none;
-    display: flex;
-    justify-content:space-evenly;
-    margin:auto 20px;
-  }
-  
-  .nav_items ul li{
- width: auto;
-  padding-top: 10px;
-  }
-  .item{
-    color: white;
-   }
 
-   .item:hover{
-    color: #eb870d;
-    transition: 0.5s;
-   }
- 
+.search input {
+  width: 100%;
+  border: none;
+  outline: none;
+  background: transparent;
+  color: rgb(15, 62, 189);
+  font-size: 15px;
+}
 
-   .dropdown:hover ul.dropdown_items{
-    display: block !important;
-   }
+.nav_items {
+  margin: 7px 20px;
+}
 
-   /* dropdown_items */
+.nav_items ul {
+  list-style: none;
+  display: flex;
+  justify-content: end;
+  margin: auto 20px;
+}
 
-   ul.dropdown_items{
-    text-align: start !important;
-    background-image: linear-gradient(to right,rgb(8, 33, 104) 40%, rgb(14, 118, 204) );
-    padding: 20px;
-    margin-left: 0 !important;
-    justify-self: start !important;
-    position: absolute;
+.nav_items ul li {
+  width: fit-content;
+  padding-top: 10px !important;
+  padding: 0px 30px;
+}
+
+.item {
+  color: white;
+}
+
+.item:hover {
+  color: #eb870d;
+  transition: 0.5s;
+}
+
+
+.dropdown li {
+  cursor: pointer !important;
+}
+
+
+.dropdown:hover ul.dropdown_items {
+  display: block !important;
+}
+
+
+.dropdown:hover ul.dropdown_items li {
+  border-bottom: 1px dotted rgba(255, 255, 255, 0.247);
+  padding: 10px 20px;
+  justify-self: start;
+}
+
+/* dropdown_items */
+
+ul.dropdown_items {
+  text-align: start !important;
+  background-image: linear-gradient(to right, rgb(8, 33, 104) 40%, rgb(14, 118, 204));
+  padding: 20px 10px;
+  border-radius: 5px;
+  margin-left: 0 !important;
+  justify-self: start !important;
+  position: absolute;
+  display: none;
+}
+
+
+
+/* dropdown_items */
+
+/* sm_controls */
+.sm_controls {
+  display: none;
+}
+
+/* sm_controls */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:912px) {
+  .header nav {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .search-bar {
+    border-radius: 10px;
+  }
+
+  #search_lg_screen {
     display: none;
-   }
+  }
 
-
-
-   /* dropdown_items */
-
-  /* sm_controls */
-.sm_controls{
-  display: none;
-}
-  /* sm_controls */
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-  @media screen and (max-width:912px){
-    .header nav{
-      grid-template-columns: 1fr 1fr;
-    }
-    .search-bar{
-   border-radius: 10px;
-    }
-    #search_lg_screen{
-      display: none;
-    }
-    #search_sm_screen{
-      display: block;
-    }
-    .sm_controls{
-      display: flex;
-      margin:auto 20px; 
-      
-    }
-
-    .sm_controls .close{
-display: none;
-    }
-
-  .sm_controls .open{
+  #search_sm_screen {
     display: block;
   }
-.sm_cntrl{
-  float: right;
-  margin: 0px 10px;
-}
-.sm_controls{
-justify-self: end;
-}
-  .sm_controls i{
-    font-size: 20px;
-    padding-top: 10px ;
+
+  .sm_controls {
+    display: flex;
+    margin: auto 20px;
+
   }
 
-  .nav_items{
+  .sm_controls .close {
     display: none;
-  position: absolute;
-  width: 100%;
-  background-image: linear-gradient(to right,rgb(8, 33, 104) 30%, rgb(14, 118, 204));
-  margin: 0;
-padding: 30px;
-margin-top: 70px;
-right: 0;
   }
 
-  .nav_items ul{
+  .sm_controls .open {
+    display: block;
+  }
+
+  .sm_cntrl {
+    float: right;
+    margin: 0px 10px;
+  }
+
+  .sm_controls {
+    justify-self: end;
+  }
+
+  .sm_controls i {
+    font-size: 20px;
+    padding-top: 10px;
+  }
+
+  .nav_items {
+    display: none;
+    position: absolute;
+    width: 100%;
+    background-image: linear-gradient(to right, rgb(8, 33, 104) 30%, rgb(14, 118, 204));
+    padding: 30px;
+    margin-top: 70px !important;
+    right: 0;
+    margin: 0;
+  }
+
+
+
+  .nav_items ul {
+    width: 100%;
     display: grid;
-    place-items: center;
     padding: 0;
+    margin: 0;
+    justify-content: inherit;
   }
-
-  ul.dropdown_items{
+.nav_items ul li{
+  width: 100% !important;
+  border-bottom: 1px dotted rgba(255, 255, 255, 0.329);
+margin: 10px 0px;
+padding:10px 0px;
+}
+  ul.dropdown_items {
     text-align: start !important;
-    background-image: linear-gradient(to right,rgb(8, 33, 104) 40%, rgb(14, 118, 204) );
+    background-image: linear-gradient(to right, rgb(8, 33, 104) 40%, rgb(14, 118, 204));
     padding: 20px 40px;
     margin-left: 0 !important;
     justify-self: start !important;
     position: absolute;
     display: none;
     z-index: 990;
-   }
-  
   }
+
+}
