--- a/src/components/css/ProductDetail.css
+++ b/src/components/css/ProductDetail.css
@@ -18,8 +18,23 @@ justify-content: center;}
     justify-self: center;
 
 }
+
+/* swiper */
+.swiper-button-prev,
+.swiper-button-next {
+    background-color: #eb870d;
+    padding: 20px;
+    border-radius: 50%;
+    color: white;
+    justify-self: center;
+}
+.swiper-pagination-bullet{
+    padding: 8px;
+}
+/* swiper */
 .prod_detail_box#img{
-background-color: #8787876c;
+    background: linear-gradient(to right,rgba(8, 34, 104, 0.411) 40%, rgba(14, 119, 204, 0.445));
+
 place-items: center;
 display: flex;
 align-content: center;
@@ -28,15 +43,30 @@ align-items: center;
 height: 450px;
 position: relative;
 text-align: center;
+-webkit-box-shadow: 0px 1px 5px 2px rgba(10, 8, 8, 0.548);
+-moz-box-shadow: 0px 1px 5px 2px rgba(10, 8, 8, 0.548);
+box-shadow: 0px 1px 5px 2px rgba(10, 8, 8, 0.548);
+border-radius: 20px;
+margin: 10px;
 }
 
 .prod_detail_box#img img{
+    background: linear-gradient(to right,rgba(8, 34, 104, 0.411) 40%, rgba(14, 119, 204, 0.445));
     animation: zoom-in-zoom-out 2s ease;
     width: fit-content;
     height: 300px;
     justify-self: center !important; 
-    border: 0.1px solid #11101027; 
+    box-shadow: 3px 3px 3px rgba(10, 8, 8, 0.548);
+    /* -webkit-box-shadow: 0px 1px 5px 2px rgba(10, 8, 8, 0.548);
+    -moz-box-shadow: 0px 1px 5px 2px rgba(10, 8, 8, 0.548);
+    box-shadow: 0px 1px 5px 2px rgba(10, 8, 8, 0.548); */
+border-radius: 20px;
+    /* border-top: 0.1px solid #eb870d; 
+    border-right: 0.1px solid rgb(15, 62, 189);
+    border-left: 0.1px solid #eb870d;
+    border-bottom: 0.1px solid rgb(15, 62, 189); */
     padding: 20px;
+    margin: 10px;
 }
 
 
@@ -48,7 +78,7 @@ text-align: center;
 
 .prod_detail_box#txt button{
     padding: 9px 28px;
-    background-color:#111010be;
+    background-image: linear-gradient(45deg, rgb(15, 62, 189) 50%,#eb870d 50%);
     color: white;
     font-size: 13px;
     border-radius: 20px;
@@ -59,10 +89,10 @@ text-align: center;
 
   .prod_detail_box#txt button:hover{
     border: 1px solid #111010be ;
-    color: white;
     transition: 1s;
     outline: none;
     background-color: white;
+    background-image: none;
     color: #111010be;
   }
 
@@ -80,7 +110,7 @@ text-align: center;
     height: 100px;
     margin: 10px 0px;
     width: 100px;
-    border: 1px solid #11101027;
+    border: 1px solid #eb870d83;
     cursor:pointer;
     animation: zoom-in-zoom-out 2s ease;
 }
