--- a/src/components/css/Signup.css
+++ b/src/components/css/Signup.css
@@ -109,6 +109,7 @@ border: 1px solid #1570EF;
     color: #667085;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
+    height: 100px;
 }
 
 .form_item label{
