--- a/src/components/css/AddProduct.css
+++ b/src/components/css/AddProduct.css
@@ -1,105 +1,34 @@
 .add_product {
-    display: grid;
-}
-
-.add_prod_form_wrap {
-    width: 80%;
-    justify-self: center;
-    display: grid;
-}
-
-.add_product_inner {
+    justify-content: center;
     display: flex;
-    justify-content: center;
+    overflow: hidden !important;
 }
-
-
-.add_product_inner .vendor_sidebar {
-    display: grid;
-    width: 17%;
-    left: 0;
-    position: fixed;
-    margin-top: 10px;
-    border-right: 1px solid rgba(160, 157, 157, 0.712);
-    overflow: auto;
-    height: fit-content;
-    overflow: auto;
-    display: grid;
-    padding: 50px 0px;
-    justify-content: center;
-    height: 95% !important;
-}
-
-.sm_navigation {
-    display: none;
-}
-
-.user {
-    display: grid;
-    grid-template-columns: 1fr;
-    height: fit-content;
-    text-align: center;
-}
-
-.user h3 {
-    font-size: 16px;
-    color: rgb(15, 62, 189);
-    margin-top: 5px !important;
-    margin: 0;
-}
-
-.user h3 span {
-    color: #eb870d;
-}
-
-.user_image {
-    height: 70px;
-    width: 70px;
-    border-radius: 50%;
-    border: 1px solid grey;
-    display: grid;
-    justify-content: center;
-    place-items: center;
-    justify-self: center;
-}
-
-.add_product_inner .vendor_sidebar .user img {
-    height: 50px;
-
-}
-
-.add_product_inner .vendor_sidebar_sm .user img {
-    height: 50px;
-
-}
-
-.add_product_inner .links h3 {
-    font-size: 18px;
-    color: rgb(15, 62, 189);
-    margin: 15px 0px;
-    width: 100%;
-}
-
-.add_product_inner .links h3 .link-out {
-    color: #eb870d;
-    font-weight: 1200;
-}
-
-
-
-
 
 
 .add_prod_form_wrap {
-    position: absolute;
-    right: 0;
+    min-height: 100%;
+    display: grid;
+    justify-content: center;
+align-items: center;
+    grid-template-columns: 1fr;
     width: 75%;
-    margin-top: 50px;
-    padding: 20px;
+    justify-self: center;
+    margin: 0px 4.5%;
+    position: absolute;
+    left: 0;
 
 }
+
+.add_prod_form_wrap_inner{
+    display: grid;
+}
+
+
+
+
 
 .add_prod_form_wrap h3 {
+    margin-top: 50px;
     font-size: 32px;
     color: rgb(15, 62, 189);
     font-weight: 700;
@@ -123,8 +52,9 @@
     align-items: flex-start;
 }
 
-.form_wrapper {
+.add_prod_form_wrap .form_wrapper {
     margin-top: 10px;
+    margin-bottom: 100px;
 }
 
 
@@ -137,7 +67,7 @@
 
 .title,
 .price,
-.category,
+.category_select,
 .featured_image,
 .product_image {
     width: 95%;
@@ -173,6 +103,7 @@
 .form_item select {
     width: 100%;
     padding: 15px;
+
     border: 1px solid #D0D5DD;
     box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
     border-radius: 8px;
@@ -183,7 +114,6 @@
     font-weight: 400;
     font-size: 13px;
     height: 55px;
-
 }
 
 
@@ -226,11 +156,24 @@
 
 .rules summary {
     color: #1570EF;
+    font-weight: 700;
+    font-size: 15px;
 }
 
+
+.add_prod_form_intro h3{
+    font-size: 30px;
+    font-weight: 800;
+}
+.rules ul{
+    list-style-type: circle;
+}
 .rules ul li {
     color: #1570EF;
-    margin: 10px 0px;
+    margin: 5px 0px;
+    font-weight: 700;
+    font-size: 13px;
+ 
 }
 
 
@@ -312,91 +255,33 @@
 
 @media screen and (max-width:1024px) {
 
-    .add_product_inner .vendor_sidebar {
+    /* .add_product_inner .vendor_sidebar {
         width: 20%;
-    }
+    } */
 
-    .add_product_inner .add_prod_form_wrap {
-        width: 80%;
+   .add_prod_form_wrap {
+        width: 90%;
     }
 
 }
 
 @media screen and (max-width:768px) {
-    .sm_navigation {
-        position: absolute;
-        display: grid;
-        margin: 20px;
-        background-color: green;
-        right: 0;
-    }
 
-    .sm_navigation .open_v_sidebar {
-        justify-self: right;
-        position: fixed;
-        z-index: 990;
-        font-size: 40px;
-        color: #1570EF;
-        border: 2px solid #1570EF;
-        outline: none;
-        padding: 5px;
-        border-radius: 5px;
-        cursor: pointer;
-        background-color: white;
-    }
 
-    .add_product_inner .vendor_sidebar {
-        display: none;
-    }
+ .add_prod_form_intro{
+    width: 95%;
+    justify-self: center;
+ }
 
-    .add_product_inner .vendor_sidebar_sm {
-        display: flex;
-        flex-direction: row;
-        width: 80%;
-        z-index: 990;
-        background-color: white;
-        left: 0;
-        position: fixed;
-        margin-top: 10px;
-        border-right: 1px solid rgba(160, 157, 157, 0.712);
-        overflow: auto;  
-        align-items: flex-start;
-        display: grid;
-        place-content: start;
-        align-items: flex-start;
-        padding: 50px 0px;
-        justify-content: start;
-        padding:  20px;
-        height: 95% !important;
-    }
-
-    .add_product_inner .vendor_sidebar_sm .links{
-        margin-top: 20px;
-    }
-
-    .add_product_inner .add_prod_form_wrap {
-        width: 100%;
-
-    }
-
-    .add_product_inner .links h3 {
-        font-size: 15px;
-        color: rgb(15, 62, 189);
-        margin: 15px 0px;
-        width: 100%;
-    }
-
-    .add_prod_form_wrap h3 {
-        font-size: 25px;
+ .add_prod_form_intro h3 {
+        font-size: 20px;
         font-weight: 600;
-        width: 95%;
-        justify-self: center;
+        
+    }
+    .rules ul li {
+        font-size: 12px;
     }
 
-    .add_prod_form_wrap {
-        width: 95%;
-        justify-self: center;
-    }
 
     .add_prod_form_wrap .form_grid {
         display: grid;
@@ -404,35 +289,28 @@
     }
 
     .rules {
-        width: 95%;
+        width: 90%;
         justify-self: center;
     }
 
-    .title,
-    .price,
-    .category,
-    .featured_image,
-    .product_image {
-        width: 95%;
-    }
 
-    .description {
-        width: 97.5%;
-    }
 
     .title,
     .price,
-    .category,
+    .category_select,
     .featured_image,
     .product_image {
         width: 95%;
         justify-self: center;
+      
     }
 
     .description {
-        width: 95%;
-        justify-self: center;
+        margin: 0px 2%;
+        width: 96%;
+
     }
+ 
 
     .add_prod_form_wrap .button button {
         width: 95%;
