--- a/src/components/css/ApiLoading.module.css
+++ b/src/components/css/ApiLoading.module.css
@@ -114,60 +114,82 @@ font-size: 18px;
       transform:scaleX(1.1);
       color: #063fa3;
       /* color: #c57109dc; */
-    }
+    
+ 
+.spinnerWrapper{
+  padding: 100px 0px;
+  background-color: #0640a313;
+  display: grid;
+  place-items: center;
+  height: 100vh;
+  align-items: center;
+  color: white;
+
+  background: linear-gradient(to right,rgba(8, 34, 104, 0.411) 40%, rgba(14, 119, 204, 0.445));
+}
+
+@keyframes api-loader-background {
+
+
+  50% {
+      background: linear-gradient(to right,rgba(8, 34, 104, 0.411) 40%, rgba(14, 119, 204, 0.445));
+    transform:scaleX(1.1);
+    color: #063fa3;
+    /* color: #c57109dc; */
   }
+}
+
+
+.spinner {
+  width: 100%;
+  height: 40px;
+  position: relative;
+justify-content: center;
+  display: grid;
+}
+.spinner p{
+  margin-top: 50px;
+  -webkit-animation: sk-bounce 1.4s infinite ease-in-out;
+  animation: sk-bounce 1.4s infinite ease-in-out;
+}
+.bounce1, .bounce2, .bounce3 {
+  width: 40px;
+  height: 100%;
+  border-radius: 50%;
+  background-color:#063fa3;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+ justify-self: center;
   
+  -webkit-animation: sk-bounce 1.4s infinite ease-in-out;
+  animation: sk-bounce 1.4s infinite ease-in-out;
+}
+
+.bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
   
-  .spinner {
-      width: 100%;
-      height: 40px;
-      position: relative;
-  justify-content: center;
-      display: grid;
-    }
-    .spinner p{
-      margin-top: 50px;
-      -webkit-animation: sk-bounce 1.4s infinite ease-in-out;
-      animation: sk-bounce 1.4s infinite ease-in-out;
-    }
-    .bounce1, .bounce2, .bounce3 {
-      width: 40px;
-      height: 100%;
-      border-radius: 50%;
-      background-color:#063fa3;
-      opacity: 0.6;
-      position: absolute;
-      top: 0;
-     justify-self: center;
-      
-      -webkit-animation: sk-bounce 1.4s infinite ease-in-out;
-      animation: sk-bounce 1.4s infinite ease-in-out;
-    }
-    
-    .bounce1 {
-      -webkit-animation-delay: -0.32s;
-      animation-delay: -0.32s;
-      
-    }
-    
-    .bounce2 {
-      -webkit-animation-delay: -0.16s;
-      animation-delay: -0.16s;
-    }
-    
-    @-webkit-keyframes sk-bounce {
-      0%, 100% { -webkit-transform: scale(0) }
-      50% { -webkit-transform: scale(1.0);}
-      
-    }
-    
-    @keyframes sk-bounce {
-      0%, 100% { 
-        transform: scale(0);
-        -webkit-transform: scale(0);
-      
-      } 50% { 
-        transform: scale(1.0);
-        -webkit-transform: scale(1.0);
-      }
-    }
+}
+
+.bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bounce {
+  0%, 100% { -webkit-transform: scale(0) }
+  50% { -webkit-transform: scale(1.0);}
+  
+}
+
+@keyframes sk-bounce {
+  0%, 100% { 
+    transform: scale(0);
+    -webkit-transform: scale(0);
+  
+  } 50% { 
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
+}
