--- a/src/components/css/VendorProduct.css
+++ b/src/components/css/VendorProduct.css
@@ -5,28 +5,30 @@ display: grid;
     align-items: center;
     min-height: 100vh;
 padding: 100px 0px;
+
 }
 
 .vendor_product_left .back_to_dashboard {
-    font-size: 16px;
-    border: 1px dotted rgb(14, 118, 204);
+    font-size: 13px;
+    border: 1px solid rgb(14, 118, 204);
     color: rgb(14, 118, 204);
     padding: 5px 20px;
-    border-radius: 20px;
+    border-radius: 10px;
 width: fit-content;
 justify-self: center;
 }
 
 
 .vendor_product_wrap{
-    flex-wrap: wrap;
-    display: flex;
+display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
    justify-content: center;
 }
 
 .vendor_product_box{
-  
+    width: 90%;
     display: grid;
+    justify-self: center;
     grid-template-columns: 1fr 1fr;
     -webkit-box-shadow: 0px 1px 5px 2px rgba(10, 8, 8, 0.548);
     -moz-box-shadow: 0px 1px 5px 2px rgba(10, 8, 8, 0.548);
@@ -40,27 +42,35 @@ margin: 20px 10px;
 }
 
 .vendor_product_box .vendor_product_box_inner img{
-    height: 220px;
+    height: 150px;
 }
 
 .vendor_product_box .vendor_product_box_inner h3{
     color:rgb(15, 62, 189) ;
-    font-size: 25px;
+    font-size: 16px;
 }
 
 
 .vendor_product_box .vendor_product_box_inner button {
-    padding: 8px 25px;
+    padding: 5px 20px;
     background-image: linear-gradient(45deg, rgb(15, 62, 189) 50%, #eb870d 50%);
     color: white;
-    font-size: 13px;
-    border-radius: 20px;
+    font-size: 12px;
+    border-radius: 5px;
     border: none;
     outline: none;
 display: block;
 margin: 10px 0px;
+display: flex;
+align-items: center;
+
 }
 
+.vendor_product_icon{
+    margin-left: 5px;
+    margin-top: 2px;
+    font-size: 12px;
+}
 
 .vendor_product_box .vendor_product_box_inner button:hover {
     box-shadow: inset 200px 0 0 0 rgb(14, 118, 204);
@@ -104,15 +114,43 @@ margin: 10px 0px;
 
 
 
+
+
+@media screen and (max-width:1024px) {
+    .vendor_product_wrap{
+        grid-template-columns: 1fr 1fr;
+        width: 100%;
+    }
+}
+
+
+
+
+
+
+
 @media screen and (max-width:768px) {
+
+
+   
+
+    .vendor_product_wrap{
+        display: grid;
+            grid-template-columns: 1fr;
+           justify-content: center;
+        }
     .vendor_product_left{
         width: 100%;
     }
+
+    .vendor_product_box{
+        width: 100%;
+    }
     .vendor_product_box .vendor_product_box_inner img{
-        height: 150px;
+        height: 100px;
     }
     .vendor_product_box .vendor_product_box_inner h3{
-        font-size: 18px;
+        font-size: 11px;
     }
     
 
