--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,10 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@500&display=swap');
 
+:root {
+  font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -19,18 +17,14 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
   margin: 0;
-  /* display: flex;
-  place-items: center; */
-  /* justify-content: space-between; */
-  /* /* min-width: 320px; */
-  /* min-height: 100vh;  */
-/* overflow-x: hidden; */
+  font-family: 'Mulish', sans-serif;
 }
 
 
@@ -50,9 +44,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -63,10 +59,22 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+
+@keyframes zoom-out {
+
+  0% {
+    transform: scale(0.2);
+  }
+
 }
