--- a/src/components/store/assets/css/Single.css
+++ b/src/components/store/assets/css/Single.css
@@ -56,7 +56,8 @@
   width: 100%;
   position: absolute;
   bottom: 0;
-
+  border: #8787876c 1px solid;
+  padding: 7px 5px;
 }
 
 
@@ -112,6 +113,7 @@
   font-size: 13px;
   border-radius: 20px;
   border: none;
+  background-color: #ffffff;
 
 }
 
@@ -157,9 +159,11 @@
 @media screen and (max-width:439px) {
 
   .lst_prod_box {
-    width: 43%;
+    width: 45%;
   }
-
+.t_and_p{
+  padding: 3px 0px;
+}
   .t_and_p h3 {
     font-size: 15px;
   }
@@ -168,6 +172,7 @@
     margin: auto 10px;
     padding: 5px 10px;
     color: #111010be;
+    background-color: #ffffff;
     width: fit-content;
     font-size: 8px;
   }
